sandbox/output
Patient.java:30: error: cannot find symbol
                .plusDays(prescriptionA.getDaysSupply());
                          ^
  symbol:   variable prescriptionA
  location: class Patient
1 error
